<resources>
    <string name="app_name">Green Benchmark</string>
    <string name="action_settings">Settings</string>

    <string name="first_fragment_label">Green Benchmark</string>
    <string name="start">Start</string>
    <string name="start_fragment">Click the button to Start</string>
    <string name="start_timestamp">Start:</string>
    <string name="stop_timestamp">Stop:</string>
    <string name="list_hint">
            If a specific scenario was selected, then only this scenario will be executed N times,
        where N = numberOfExecutions
    </string>

    <string name="prompt_load_config">Number of Executions</string>
    <string name="action_config">Save Config</string>
    <string name="action_config_short">App Config</string>
    <string name="prompt_server_url">Server url</string>
    <string name="prompt_specific_scenario">Select Scenario</string>

    <string name="action_account">Account Form</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_phone_country_code">Phone Country Code</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="prompt_email">Email</string>
    <string name="action_save">Save</string>
    <string name="action_save_short">Save Account</string>

    <string name="action_active">Active</string>
    <string name="action_notification">Notifications</string>

    <string name="prompt_download">File to Download</string>
    <string name="action_download">Download</string>
    <string name="action_download_short">Download File</string>

    <string name="prompt_upload">File to Upload</string>
    <string name="action_upload">Upload</string>
    <string name="action_upload_short">Upload File</string>

    <string name="prompt_media">Media File</string>
    <string name="action_media">Media Execution</string>
    <string name="action_media_short">Execute Media File</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>

    <string name="login_failed">"Login failed"</string>
    <string name="required_username">Username is required</string>
    <string name="required_password">Password is required</string>
    <string name="invalid_file">Not a valid file</string>
    <string name="account_created_failed">"Account create failed"</string>
    <string name="download_failed">"Download failed"</string>
    <string name="upload_failed">"Upload failed"</string>
    <string name="config_failed">"Configuration failed"</string>
    <string name="invalid_test_load">"Load must be >=10"</string>
    <string name="invalid_media_uri">"Media file is required"</string>
    <string name="invalid_upload_uri">"Upload file is required"</string>
    <string name="invalid_download_uri">"Download file is required"</string>
    <string name="invalid_server_url">"Server URL is required"</string>

    <string name="invalid_first_name">First name required</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_phone_number">Not a valid phone number</string>
    <string name="invalid_phone_country_code">Select country code</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>

    <string name="test_execution_running">Test Execution is Running</string>
    <string name="test_execution_finished">Test Execution Finished!</string>
    <string name="action_reconfigure">Reconfigure</string>
    <string name="select_file">Select File</string>

</resources>
