<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.edu.utfpr.marvas.greenbenchmark.MainActivity">

    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/action_sign_in"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_account"
        android:orderInCategory="100"
        android:title="@string/action_account"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_download"
        android:orderInCategory="100"
        android:title="@string/action_download_short"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_upload"
        android:orderInCategory="100"
        android:title="@string/action_upload_short"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_media"
        android:orderInCategory="100"
        android:title="@string/action_media_short"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>